plugins {
    id 'org.springframework.boot' version '2.5.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'war'
}

group = 'hello'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //JSP 추가
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
    implementation 'javax.servlet:jstl'

    // 파일 업로드 & 다운로드
    implementation group: 'servlets.com', name: 'cos', version: '05Nov2002'
    implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation group: 'org.webjars.bower', name: 'jquery', version: '3.5.1'

    implementation group: 'org.webjars.npm', name: 'fullcalendar', version: '5.7.0'

    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}
